--- a/app/src/main/res/layout/recyclerview_items_row.xml
+++ b/app/src/main/res/layout/recyclerview_items_row.xml
@@ -87,7 +87,17 @@
                 android:text="@string/tax_"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
-
+            <TextView
+                android:id="@+id/area"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/alegreya"
+                android:gravity="center"
+                android:lineHeight="19sp"
+                android:text="@string/tax_"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
         </LinearLayout>
     </LinearLayout>
 
