--- a/app/src/main/res/layout/activity_order_report.xml
+++ b/app/src/main/res/layout/activity_order_report.xml
@@ -108,7 +108,7 @@ android:layout_marginEnd="4dp"
             android:layout_height="wrap_content"
             android:textSize="13sp"
             android:layout_marginEnd="5dp"
-            android:background="@color/black"
+            android:background="@drawable/bg_btn"
             android:text="@string/Order"
             android:textColor="@color/white" />
         <Button
@@ -150,7 +150,7 @@ android:layout_weight="9"
             android:layout_weight="1"
 
             android:gravity="center"
-            android:text="@string/itemNCode"
+            android:text="@string/item_Code"
             android:textColor="@color/white"/>
 
         <TextView android:layout_width="150dp"
