--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -4,8 +4,8 @@
     <item
         android:id="@+id/action_home"
         android:enabled="true"
-        android:icon="@drawable/ic_home_22"
-        android:title="@string/home"/>
+        android:icon="@drawable/ic_list"
+        android:title="@string/item_list"/>
 
     <item
         android:id="@+id/action_cart"
