--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/itemCard"
@@ -55,11 +55,12 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginStart="5dp"
-            android:elevation="10dp"
             android:src="@drawable/arabescatobreccia"
             app:layout_constraintBottom_toBottomOf="@+id/itemCard"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/itemCard" />
+            app:layout_constraintTop_toTopOf="@+id/itemCard"
+            android:translationZ="5dp"
+            />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
@@ -70,8 +71,8 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/expandBtn"
-            android:layout_width="31dp"
-            android:layout_height="31dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_marginEnd="5dp"
             android:clickable="true"
             android:elevation="5dp"
@@ -89,7 +90,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="visible">
+        android:visibility="gone">
 
 <!--        <ImageButton
             android:id="@+id/addToCartBtn"
@@ -138,17 +139,17 @@
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="102dp"
+                        android:layout_height="130dp"
                         android:layout_marginHorizontal="16dp"
-                        android:layout_marginTop="15dp"
+                        android:layout_marginTop="10dp"
                         android:elevation="10dp"
                         app:cardCornerRadius="10dp">
 
                         <ImageView
                             android:id="@+id/itemImg2"
                             android:layout_width="match_parent"
-                            android:layout_height="102dp"
-                            android:background="@drawable/arabescatobreccia" />
+                            android:layout_height="130dp"
+                            android:background="@color/white" />
 
                     </androidx.cardview.widget.CardView>
 
@@ -188,7 +189,8 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:textAlignment="viewStart"/>
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -227,7 +229,8 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:textAlignment="viewStart"/>
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -268,7 +271,8 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:textAlignment="viewStart"/>
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -350,7 +354,8 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:textAlignment="viewStart"/>
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -383,6 +388,7 @@
                             android:layout_marginStart="102dp"
                             android:fontFamily="@font/alegreya_sans"
                             android:gravity="start"
+                            android:textAlignment="viewStart"
                             android:inputType="number"
                             android:lineHeight="21.6px"
                             android:textColor="@color/black"
@@ -573,7 +579,7 @@
                         android:drawableTint="@color/white"
                         android:background="@drawable/bg_btn"
                         android:textColor="@color/white"
-                        android:layout_marginVertical="15dp"/>
+                        android:layout_marginVertical="12dp"/>
 
 
                 </LinearLayout>
