--- a/app/src/main/res/layout/recyclerview_items_row.xml
+++ b/app/src/main/res/layout/recyclerview_items_row.xml
@@ -102,7 +102,7 @@
             <TextView
                 android:id="@+id/reomveItem"
                 android:layout_width="30dp"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/alegreya"
                 android:gravity="center"
