--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,7 +21,7 @@
     <color name="orange">#FF9F00</color>
     <color name="yellow">#FFD400</color>
     <color name="no_color">#00FFFFFF</color>
-
+    <color name="amountColor">#387C44</color>
     <color name="yelow">#F5E028</color>
 
 
