--- a/app/src/main/res/layout/activity_order_report.xml
+++ b/app/src/main/res/layout/activity_order_report.xml
@@ -5,14 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/main_bg"
-    tools:context=".Activities.OrderReport">
+    android:background="@color/main_bg">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="5dp"
-        android:layout_weight="8"
+        android:layout_weight="7"
         android:orientation="horizontal">
 
         <TextView
@@ -21,32 +20,44 @@
             android:layout_marginEnd="10dp"
             android:text="@string/VoHNO"
             android:layout_weight="1"
+            android:padding="5dp"
             android:textStyle="bold"
-            android:gravity="center"
+            android:gravity="start"
             android:textColor="@color/primaryTextColor"
             android:textSize="14sp" />
 
-        <EditText
+        <TextView
             android:id="@+id/ORDERNO"
-              android:layout_weight="1"
+            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="date"
             android:layout_gravity="center"
             android:gravity="center"
-            android:background="@drawable/edtstyle"
+
             android:textColor="@color/black"
             android:textSize="12sp"
             />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
+        android:layout_weight="7"
+        android:orientation="horizontal">
+
+
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginEnd="10dp"
+            android:padding="5dp"
             android:text="@string/customerName"
             android:layout_weight="1"
             android:textStyle="bold"
-            android:gravity="center"
+            android:gravity="start"
             android:textColor="@color/primaryTextColor"
             android:textSize="14sp" />
 
@@ -58,8 +69,7 @@
             android:inputType="date"
             android:layout_gravity="center"
             android:gravity="center"
-            android:background="@drawable/edtstyle"
-android:layout_marginEnd="4dp"
+            android:layout_marginEnd="4dp"
             android:textColor="@color/black"
             android:textSize="12sp"
             />
@@ -71,7 +81,7 @@ android:layout_marginEnd="4dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        android:layout_weight="8"
+        android:layout_weight="7"
         android:orientation="horizontal">
 
         <TextView
@@ -79,10 +89,10 @@ android:layout_marginEnd="4dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="10dp"
             android:text="@string/date"
-
+            android:padding="5dp"
             android:layout_weight="1.2"
             android:textStyle="bold"
-            android:gravity="center"
+            android:gravity="start"
             android:textColor="@color/primaryTextColor"
             android:textSize="14sp" />
 
@@ -122,87 +132,161 @@ android:layout_marginEnd="4dp"
             android:textColor="@color/white" />
 
     </LinearLayout>
-<HorizontalScrollView
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/basketListCard"
         android:layout_width="match_parent"
-        android:scrollbars="horizontal"
-        android:layout_weight="1.8"
-        android:fillViewport="true"
-        android:layout_height="match_parent">
-
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_weight="1.8"
-    android:layout_height="match_parent">
-
-
-    <TableRow
+        android:layout_weight="2.1"
+        android:layout_marginBottom="5dp"
         android:layout_height="match_parent"
-android:layout_weight="9"
+        android:layout_below="@+id/customer_textInput"
+        android:layout_centerHorizontal="true"
+        android:layout_marginHorizontal="26dp"
+        android:layout_marginTop="10dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="4dp">
 
-        android:background="@color/primaryTextColor"
-        android:layout_width="match_parent">
-
-        <TextView
-            android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-
-            android:gravity="center"
-            android:text="@string/item_Code"
-            android:textColor="@color/white"/>
-
-        <TextView android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/item_Name_"
-            android:textColor="@color/white"/>
-        <TextView android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:text="@string/qty"
-            android:gravity="center"
-            android:layout_weight="2"
-            android:textColor="@color/white"/>
-        <TextView android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:text="@string/price_"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:textColor="@color/white"/>
-
-        <TextView android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:text="@string/discount_"
-            android:textColor="@color/white"/>
-        <TextView android:layout_width="150dp"
-            android:layout_height="match_parent"
-            android:text="@string/tax_"
-            android:layout_weight="2"
-            android:gravity="center"
-            android:textColor="@color/white"/>
-
-    </TableRow>
-        <androidx.recyclerview.widget.RecyclerView
+        <HorizontalScrollView
             android:layout_width="match_parent"
-            android:id="@+id/ordersDetalisRec"
             android:layout_height="match_parent"
-            android:layout_weight="1"/>
+            android:fillViewport="true"
+
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="23dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
 
+
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/alegreya"
+                        android:gravity="center"
+                        android:lineHeight="19sp"
+                        android:text="@string/item_Code"
+                        android:textColor="@color/primaryTextColor"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/alegreya"
+                        android:gravity="center"
+                        android:lineHeight="19sp"
+                        android:text="@string/item_Name_"
+                        android:textColor="@color/primaryTextColor"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/alegreya"
+                        android:gravity="center"
+                        android:lineHeight="19sp"
+                        android:text="@string/qty"
+                        android:textColor="@color/primaryTextColor"
+                        android:textSize="14sp" />
+
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/alegreya"
+                        android:gravity="center"
+                        android:lineHeight="19sp"
+                        android:text="@string/price_"
+                        android:textColor="@color/primaryTextColor"
+                        android:textSize="14sp" />
+
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/alegreya"
+                        android:gravity="center"
+                        android:lineHeight="19sp"
+                        android:text="@string/discount_"
+                        android:textColor="@color/primaryTextColor"
+                        android:textSize="14sp" />
+
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/alegreya"
+                        android:gravity="center"
+                        android:lineHeight="19sp"
+                        android:text="@string/tax_"
+                        android:textColor="@color/primaryTextColor"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/alegreya"
+                        android:gravity="center"
+                        android:lineHeight="19sp"
+                        android:text="@string/area_"
+                        android:textColor="@color/primaryTextColor"
+                        android:textSize="14sp" />
+                    <TextView
+                        android:layout_width="20dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/alegreya"
+                        android:gravity="center"
+                        android:lineHeight="19sp"
+                        android:background="@drawable/ic_baseline_remove_circle_24"
+                        android:visibility="invisible"
+                        android:textSize="14sp" />
+
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="11dp"
+                    android:background="@color/primaryTextColor" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/ordersDetalisRec"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+            </LinearLayout>
+        </HorizontalScrollView>
+
+
+    </com.google.android.material.card.MaterialCardView>
     <TableRow
         android:layout_height="match_parent"
-        android:layout_weight="9"
+        android:layout_weight="7"
 
         android:background="@color/gray_btn_bg_color"
         android:layout_width="match_parent">
         <TextView
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-          android:textColor="@color/primaryTextColor"
+            android:textColor="@color/primaryTextColor"
             android:textSize="18sp"
             android:gravity="center"
             android:visibility="gone"
@@ -232,7 +316,7 @@ android:layout_weight="9"
         <TextView
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:textColor="@color/white"
+            android:textColor="@color/amountColor"
             android:textSize="18sp"
             android:layout_weight="1"
             android:text="0.0"
@@ -251,7 +335,7 @@ android:layout_weight="9"
         <TextView
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:textColor="@color/white"
+            android:textColor="@color/amountColor"
             android:textSize="18sp"
             android:layout_weight="1"
             android:text="0.0"
@@ -259,8 +343,6 @@ android:layout_weight="9"
             android:id="@+id/tax"/>
 
     </TableRow>
-</LinearLayout>
-</HorizontalScrollView>
     <include
         android:id="@+id/bottom_navigation"
         layout="@layout/bottom_nav_bar"
