--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -485,6 +485,7 @@
                             android:gravity="start"
                             android:inputType="number"
                             android:selectAllOnFocus="true"
+                            android:textIsSelectable="true"
                             android:lineHeight="21.6px"
                             android:textColor="@color/black"
                             android:textSize="16sp"
