--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,13 +45,13 @@
                 android:layout_below="@+id/main_title"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="35dp"
+                android:layout_marginTop="3dp"
                 android:fontFamily="@font/alegreya_sans"
                 android:gravity="top"
                 android:lineHeight="26sp"
                 android:text="@string/sign_in_with"
                 android:textColor="#B3000000"
-                android:textSize="22sp"
-                android:layout_marginTop="3dp"/>
+                android:textSize="22sp" />
 
             <TextView
                 android:id="@+id/errorMsg"
@@ -175,7 +175,10 @@
                 android:layout_below="@+id/loginBtn"
                 android:layout_alignParentStart="true"
                 android:layout_centerHorizontal="true"
-                android:layout_margin="11dp"
+                android:layout_marginStart="11dp"
+                android:layout_marginTop="11dp"
+                android:layout_marginEnd="11dp"
+                android:layout_marginBottom="11dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
