--- a/app/src/main/res/layout/activity_order_report.xml
+++ b/app/src/main/res/layout/activity_order_report.xml
@@ -5,14 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/main_bg">
+    android:background="#EEEEF1">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="7dp"
         android:layout_weight="7"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginHorizontal="26dp"
+        >
 
         <TextView
             android:layout_width="match_parent"
@@ -22,7 +24,7 @@
             android:layout_weight="1"
             android:padding="5dp"
             android:textStyle="bold"
-            android:gravity="start"
+            android:gravity="start|center_vertical"
             android:textColor="@color/primaryTextColor"
             android:textSize="14sp" />
 
@@ -45,7 +47,9 @@
         android:layout_height="match_parent"
         android:layout_marginTop="5dp"
         android:layout_weight="7"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginHorizontal="26dp"
+        >
 
 
 
@@ -57,7 +61,7 @@
             android:text="@string/customerName"
             android:layout_weight="1"
             android:textStyle="bold"
-            android:gravity="start"
+            android:gravity="start|center_vertical"
             android:textColor="@color/primaryTextColor"
             android:textSize="14sp" />
 
@@ -82,7 +86,9 @@
         android:layout_height="match_parent"
 
         android:layout_weight="7"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginHorizontal="26dp"
+        >
 
         <TextView
             android:layout_width="match_parent"
@@ -92,7 +98,7 @@
             android:padding="5dp"
             android:layout_weight="1.2"
             android:textStyle="bold"
-            android:gravity="start"
+            android:gravity="start|center_vertical"
             android:textColor="@color/primaryTextColor"
             android:textSize="14sp" />
 
