--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -5,7 +5,8 @@
         android:id="@+id/action_home"
         android:enabled="true"
         android:icon="@drawable/ic_list"
-        android:title="@string/item_list"/>
+        android:title="@string/item_list"
+        />
 
     <item
         android:id="@+id/action_cart"
