--- a/app/src/main/res/layout/activity_add_new_user.xml
+++ b/app/src/main/res/layout/activity_add_new_user.xml
@@ -201,21 +201,16 @@
             android:layout_weight="1.20"
             android:orientation="vertical">
 
-            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/adduser"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
-
                 android:background="@drawable/bg_btn"
                 android:fontFamily="@font/alegreya_sans_medium"
                 android:letterSpacing="0.08"
-                android:padding="15dp"
                 android:text="@string/save"
                 android:textColor="@color/white"
-                android:textSize="20sp"
-                app:initialCornerAngle="27dp"
-                app:spinning_bar_color="@color/white" />
+                android:textSize="20sp" />
         </LinearLayout>
 
         <View
