--- a/app/src/main/res/layout/recyclerview_items_row.xml
+++ b/app/src/main/res/layout/recyclerview_items_row.xml
@@ -12,7 +12,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <TextView
@@ -22,7 +22,6 @@
                 android:layout_weight="1"
                 android:fontFamily="@font/alegreya"
                 android:gravity="center"
-                android:lineHeight="19sp"
                 android:text="@string/item_Name_"
                 android:textColor="@color/black"
                 android:textSize="14sp" />
