--- a/app/src/main/res/layout/activity_add_new_customer.xml
+++ b/app/src/main/res/layout/activity_add_new_customer.xml
@@ -87,7 +87,8 @@
                     android:background="@drawable/edittextstyle"
                     android:padding="4dp"
                     android:textColor="@color/primaryTextColor"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:maxLines="1"/>
 
 
             </LinearLayout>
