--- a/app/src/main/res/layout/activity_add_new_user.xml
+++ b/app/src/main/res/layout/activity_add_new_user.xml
@@ -79,7 +79,9 @@
                 android:background="@drawable/edittextstyle"
                 android:padding="4dp"
                 android:textColor="@color/primaryTextColor"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:maxLines="1"
+                android:inputType="text"/>
 
 
         </LinearLayout>
@@ -112,7 +114,8 @@
                 android:padding="4dp"
                 android:textColor="@color/primaryTextColor"
                 android:textSize="18sp"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword"
+                android:maxLines="1"/>
 
         </LinearLayout>
 
