--- a/app/src/main/res/layout/pre_order_row.xml
+++ b/app/src/main/res/layout/pre_order_row.xml
@@ -23,7 +23,7 @@
         <TextView
             android:id="@+id/cusNO"
             android:layout_width="match_parent"
-
+            android:gravity="center"
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:padding="3dp"
