--- a/app/src/main/res/layout/recyclerview_items_row.xml
+++ b/app/src/main/res/layout/recyclerview_items_row.xml
@@ -1,89 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="45dp"
-    android:orientation="horizontal"
-    android:layout_marginTop="2dp">
+    android:layout_height="wrap_content"
+    android:layout_margin="2dp"
+    android:gravity="center"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/item_name"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alegreya"
         android:gravity="center"
         android:text="@string/item_Name_"
         android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
     <TextView
 
         android:id="@+id/itemNCode"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alegreya"
         android:gravity="center"
         android:text="@string/item_Code"
         android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/qty"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alegreya"
         android:gravity="center"
         android:text="@string/qty"
         android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/price"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alegreya"
         android:gravity="center"
         android:text="@string/price_"
         android:textColor="@color/black"
-
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/discount"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alegreya"
         android:gravity="center"
         android:text="@string/discount_"
         android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/taxx"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alegreya"
         android:gravity="center"
         android:text="@string/tax_"
         android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/area"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/alegreya"
         android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:textSize="13sp" />
 
     <TextView
         android:id="@+id/reomveItem"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="@drawable/ic_baseline_remove_circle_24"
-        android:fontFamily="@font/alegreya"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:textSize="14sp" />
+        android:gravity="center" />
 
 </LinearLayout>
