--- a/app/src/main/res/layout/ip_settings_dialog.xml
+++ b/app/src/main/res/layout/ip_settings_dialog.xml
@@ -107,7 +107,7 @@
                     android:id="@+id/portEdt"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="number"
+                    android:inputType="text"
                     android:maxLines="1" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -134,8 +134,54 @@
                     android:textAlignment="viewStart" />
 
             </com.google.android.material.textfield.TextInputLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/filtersLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/logo_remove"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="25dp">
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputmaxVoch"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginTop="26dp"
+                android:hint="@string/VOchNum"
+                app:endIconCheckable="true"
+                app:endIconDrawable="@drawable/ic_baseline_save_24"
+                app:endIconMode="custom"
+                app:endIconTint="@color/red"
+                app:boxCornerRadiusBottomEnd="10dp"
+                app:boxCornerRadiusBottomStart="10dp"
+                app:boxCornerRadiusTopEnd="10dp"
+                app:boxCornerRadiusTopStart="10dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/maxVoch"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:maxLines="1"
+                    android:textAlignment="viewStart" />
 
 
+            </com.google.android.material.textfield.TextInputLayout>
+
+                <ImageView
+                    android:id="@+id/editVochNo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/ic_baseline_edit_24"
+                    app:layout_constraintBottom_toBottomOf="@id/textInputmaxVoch"
+                    app:layout_constraintEnd_toEndOf="@+id/textInputmaxVoch"
+                    app:layout_constraintTop_toTopOf="@id/textInputmaxVoch"
+                    android:layout_marginEnd="50dp"
+                    android:layout_marginTop="5dp"
+                    app:tint="@color/blue" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
